config: update corne configuration

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -17,3 +17,19 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 
 # change board name
 CONFIG_ZMK_KEYBOARD_NAME="ZMK Corne Cyuss"
+
+# set deep sleep
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+
+# enable display and set idle timeout
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_IDLE_TIMEOUT=30000
+
+# disable logging to save power
+CONFIG_LOG=n
+CONFIG_BT_DEBUG_LOG=n
+
+# enable the 32.768 kHz crystal for better power efficiency in sleep mode
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=y
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_30PPM=y
