--- a/config/corne.conf
+++ b/config/corne.conf
@@ -24,7 +24,7 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 
 # enable display and set idle timeout
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_DISPLAY_IDLE_TIMEOUT=30000
+# CONFIG_ZMK_DISPLAY_IDLE_TIMEOUT=30000
 
 # disable logging to save power
 CONFIG_LOG=n
