config: update keyboard name

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -16,7 +16,7 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 # CONFIG_ZMK_USB_LOGGING=y
 
 # change board name
-CONFIG_ZMK_KEYBOARD_NAME="ZMK Corne Cyuss"
+CONFIG_ZMK_KEYBOARD_NAME="TA Corne"
 
 # set deep sleep
 CONFIG_ZMK_SLEEP=y
